--- a/practicas/Conecta4/app/src/main/res/drawable/ficha1.xml
+++ b/practicas/Conecta4/app/src/main/res/drawable/ficha1.xml
@@ -6,5 +6,5 @@
     android:useLevel="false"
     android:thicknessRatio="3.4">
     <solid
-        android:color="@android:color/holo_green_dark" />
+        android:color="#0b2eba" />
 </shape>
