--- a/practicas/Conecta4/app/src/main/res/drawable/ficha2.xml
+++ b/practicas/Conecta4/app/src/main/res/drawable/ficha2.xml
@@ -6,5 +6,5 @@
     android:useLevel="false"
     android:thicknessRatio="3.4">
     <solid
-        android:color="@android:color/holo_orange_dark" />
+        android:color="#ba0000"/>
 </shape>
