--- a/practicas/Conecta4/app/src/main/res/layout/activity_main.xml
+++ b/practicas/Conecta4/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:stretchColumns="7"
+    android:background="@android:color/background_light"
     tools:context=".MainActivity">
-
     <TableRow style="@style/estiloFila">
 
         <ImageView
