--- a/practicas/Conecta4Online/app/src/main/res/layout/about.xml
+++ b/practicas/Conecta4Online/app/src/main/res/layout/about.xml
@@ -1,32 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    tools:context="com.example.guillermo.conecta4online.About"
+    android:gravity="right"
+    android:orientation="vertical">
+
     <TextView
-        android:id="@+id/prueba1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Prueba"
-        />
+        android:layout_height="wrap_content"
+        android:id="@+id/titulo"
+        android:text="Conecta 4"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:layout_marginBottom="10dp"/>
+
     <TextView
-        android:id="@+id/prueba2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Prueba"
-        />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/about"
+        android:text="@string/aboutMe"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="12dp"
+        android:textAlignment="gravity"
+        android:layout_marginBottom="20dp"/>
+
     <TextView
-        android:id="@+id/prueba3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Prueba"
-        />
+        android:layout_height="wrap_content"
+        android:id="@+id/autor"
+        android:text="Autor: Guillermo Boquizo Sánchez"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:layout_marginBottom="8dp"/>
+
     <TextView
-        android:id="@+id/prueba4"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Prueba"
-        />
+        android:layout_height="wrap_content"
+        android:id="@+id/ciclo"
+        android:text="Ciclo: 2ºDAW"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/twitter"
+        android:text="Twitter: @Chekke26"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/correo"
+        android:text="Correo: guillermoboquizosanchez@gmail.com"
+        android:gravity="center"
+        android:textSize="20dp"/>
 
 </LinearLayout>
