--- a/practicas/Conecta4Online/app/src/main/res/menu/menu.xml
+++ b/practicas/Conecta4Online/app/src/main/res/menu/menu.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:tools="http://schemas.android.com/tools"
+tools:context=".InitialActivity"
     >
+<item
+    android:id="@+id/menuAbout"
+    android:title="@string/about" >
+</item>
 
-    <item android:id="@+id/menuAbout"
-        android:title="@string/about" >
-    </item>
+<item
+    android:id="@+id/menuSendMessage"
+    android:title="@string/sendmessage" >
+</item>
 
-    <item android:id="@+id/menuSendMessage"
-        android:title="@string/sendmessage" >
-    </item>
-
-    <item android:id="@+id/menuSettings"
-        android:title="@string/settings" >
-    </item>
+<item
+    android:id="@+id/menuSettings"
+    android:title="@string/settings" >
+</item>
 
 </menu>
